Delete forecast of the week and add anchor tag

--- a/weather_forecast.html
+++ b/weather_forecast.html
@@ -98,88 +98,12 @@
           </div>
         </div>
       </div>
-
-      <!--FORECAST OF THE WEEK-->
-
-      <!--Days of The Week Row-->
-      <div class="card">
-        <div class="row">
-          <div class="col">
-            <div class="card-body">Tuesday</div>
-          </div>
-          <div class="col">
-            <div class="card-body">Wednesday</div>
-          </div>
-          <div class="col">
-            <div class="card-body">Thursday</div>
-          </div>
-          <div class="col">
-            <div class="card-body">Friday</div>
-          </div>
-          <div class="col">
-            <div class="card-body">Saturday</div>
-          </div>
-          <div class="col">
-            <div class="card-body">Sunday</div>
-          </div>
-
-          <!--Weather Row-->
-          <div class="row">
-            <div class="col">
-              <div class="card-body emoji">
-                <span style="font-size: 100px">&#127783;</span>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card-body emoji">
-                <span style="font-size: 100px">&#127788;</span>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card-body emoji">
-                <span style="font-size: 100px">&#9729;&#65039;</span>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card-body emoji">
-                <span style="font-size: 100px">&#127788;</span>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card-body emoji">
-                <span style="font-size: 100px">&#9925;</span>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card-body emoji">
-                <span style="font-size: 100px">&#127780;</span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!--Temperature Row-->
-        <div class="row">
-          <div class="col">
-            <div class="card-body">4°C / 1°C</div>
-          </div>
-          <div class="col">
-            <div class="card-body">4°C / -1°C</div>
-          </div>
-          <div class="col">
-            <div class="card-body">7°C / -2°C</div>
-          </div>
-          <div class="col">
-            <div class="card-body">4°C / -2°C</div>
-          </div>
-          <div class="col">
-            <div class="card-body">5°C / -3°C</div>
-          </div>
-          <div class="col">
-            <div class="card-body">4°C / -4°C</div>
-          </div>
-        </div>
-      </div>
+      <p>
+        <a href="https://github.com/ps-polina/weather-app" target="_blank"
+          >Open source code</a
+        >
+        by Paulina
+      </p>
     </div>
     <script src="src/javascript.js"></script>
   </body>
